--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,7 +1,7 @@
 .footerContainer {
-  background: #33a9d1;
+  background: #8acff5;
   height: auto;
-  padding-top: 3rem;
+  padding-top: 2rem;
 }
 .footerContainer span {
     color: black;
