--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,25 +5,14 @@
   justify-content: space-between;
   position: fixed;
   width: 100%;
-  background-color: #5ab9d8;
+  background-color: #83c3e6;
   transition: all ease 0.5s;
   z-index: 6;
-}
-.activeCor {
-  background-color: #090a46;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: fixed;
-  width: 100%;
-  transition: all ease 0.5s;
-
 }
 
   .title span {
     color: black;
-    font-family: Lobster;
+    font-family: Inter;
     font-size: 2rem;
     padding-left: 4rem;
   }
