--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,18 +13,13 @@
  }
 
  body {
-   background: radial-gradient(at top left, rgba(146,43,225,1) 0%, rgba(43,9,107,1) 100%);
+   background: rgb(255, 255, 255);
    background-repeat: no-repeat;
  }
 
  p {
-   margin: 16px auto;
-   line-height: 1.5em;
- }
-
- .layout {
-   max-width: 1200px;
-   margin: 0 auto;
+   margin: auto;
+   
  }
 
  nav { 
